<resources>
    <string name="app_name">UserProfile</string>
    <string name="Msg1">Hello Kasun</string>
    <string name="my_account">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="name">Fernando K.S</string>
    <string name="name_text">User Name</string>
    <string name="phone_text">Phone </string>
    <string name="phone">0774675443</string>
    <string name="email_text">Email </string>
    <string name="email">Fernando123@gmail.com</string>
</resources>