<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ImageView
       android:id="@+id/icon1"
       android:layout_width="120dp"
       android:layout_height="120dp"
       android:layout_marginLeft="150dp"
       android:layout_marginTop="100dp"
       android:src="@drawable/person4"
      />


   <Button
       android:id="@+id/edit_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_marginLeft="80dp"
       android:layout_marginRight="80dp"
       android:layout_marginBottom="138dp"
       android:background="@drawable/buttons"
       android:padding="12dp"
       android:text="EDIT MY PROFILE"
       android:textAllCaps="false"
       android:textColor="@android:color/white"
       android:textSize="18sp"
      />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/name"
       android:layout_below="@id/icon1"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="185dp"
       android:textSize="18dp"
       android:textColor="@android:color/black"
       />

   <TextView
       android:id="@+id/textView7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/name_text"
       android:layout_below="@id/icon1"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="45dp"
       android:textSize="18dp"
       android:textColor="@android:color/black"/>

   <TextView
       android:id="@+id/textView8"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/email_text"
       android:layout_below="@id/textView7"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="45dp"
       android:textSize="18dp"
       android:textColor="@android:color/black"
       />

   <TextView
       android:id="@+id/textView9"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/email"
       android:layout_below="@id/textView6"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="185dp"
       android:textSize="18dp"
       android:textColor="@android:color/black"/>

   <TextView
       android:id="@+id/textView10"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/phone_text"
       android:layout_below="@id/textView9"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="45dp"
       android:textSize="18dp"
       android:textColor="@android:color/black"/>

   <TextView
       android:id="@+id/textView11"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/phone"
       android:layout_below="@id/textView9"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="185dp"
       android:textSize="18dp"
       android:textColor="@android:color/black"/>

   <Button
       android:id="@+id/delete_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_marginLeft="80dp"
       android:layout_marginRight="80dp"
       android:layout_marginBottom="60dp"
       android:background="@drawable/buttons"
       android:padding="12dp"
       android:text="DELETE MY ACCOUNT"
       android:textAllCaps="false"
       android:textColor="@android:color/white"
       android:textSize="18sp"
       />


</RelativeLayout>