<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity2">

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/person4"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Msg1"
        android:layout_marginTop="40dp"
       android:layout_marginLeft="40dp"
        android:textSize="25dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:layout_below="@id/icon1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="150dp"
        android:textSize="22dp"
        android:textColor="@android:color/holo_red_dark"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_below="@id/textView5"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="150dp"
        android:textSize="22dp"
        android:textColor="@android:color/holo_red_dark"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_friends"
        android:layout_below="@id/textView2"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="150dp"
        android:textSize="22dp"
        android:textColor="@android:color/holo_red_dark"/>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_below="@id/textView4"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="150dp"
        android:textSize="22dp"
        android:textColor="@android:color/holo_red_dark"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginRight="200dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_baseline_supervisor_account_24" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon1"
        android:layout_marginRight="200dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_baseline_account_box_24"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginRight="200dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_baseline_settings_24"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginRight="200dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/ic_baseline_exit_to_app_24"/>

</RelativeLayout>